CXF-8407: Incorporate changes caused by JEP-396 integration into JDK-16+. Added JDK16+ profile to cxf-systests-transports since it overrides cxf.surefire.fork.vmargs
(cherry picked from commit 99f531c35e44289584a4c612472c36a491bec9f2)